feat - add calendar endpoint
